<resources>
    <string name="app_name">Calculator</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="plus">&#43;</string>
    <string name="minus">&#45;</string>
    <string name="times">&#215;</string>
    <string name="obelus">&#247;</string>
    <string name="comma">&#44;</string>
    <string name="equal">&#61;</string>
</resources>
